# rust-realworld-entrait

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 1_init.sql
realworld_app/: Cargo.toml
realworld_app/src/: api.rs  app.rs  article.rs  auth.rs  config.rs  lib.rs  main.rs  password.rs  profile.rs  test_util.rs  user.rs
realworld_app/src/api/: article_api.rs  user_api.rs
realworld_app/src/routes/: article_routes.rs  mod.rs  profile_routes.rs  user_routes.rs
realworld_article/: Cargo.toml
realworld_article/src/: lib.rs  profile.rs
realworld_core/: Cargo.toml
realworld_core/src/: error.rs  iter_util.rs  lib.rs  timestamp.rs
realworld_core/src/article/: mod.rs  repo.rs
realworld_core/src/comment/: mod.rs  repo.rs
realworld_core/src/user/: auth.rs  mod.rs  password.rs
realworld_db/: Cargo.toml
realworld_db/src/: article.rs  article_db.rs  comment.rs  comment_db.rs  lib.rs  user.rs  user_db.rs  user_repo.rs
realworld_domain/: Cargo.toml
realworld_domain/src/: error.rs  lib.rs  timestamp.rs
realworld_domain/src/article/: mod.rs  repo.rs
realworld_domain/src/comment/: repo.rs
realworld_domain/src/user/: auth.rs  email.rs  mod.rs  password.rs  profile.rs  repo.rs
realworld_user/: Cargo.toml
realworld_user/src/: auth.rs  lib.rs  password.rs
src/: api.rs  app.rs  auth.rs  db.rs  error.rs  lib.rs  password.rs  test_util.rs  types.rs  user.rs
src/api/: user_api.rs
src/db/: user_db.rs
