[package]
name = "rust-realworld-ioc"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
axum = { version = "0.5", features = ["tower-log", "headers"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
headers = "0.3"
bytes = "1"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
entrait = "0.3"
implementation = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
thiserror = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = "0.4"
rand = "0.8"
anyhow = "1"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
mockall = "0.11"
unimock = "0.2"
maplit = "1"
tracing = "0.1"

[dev-dependencies]
url = "2.0"
dotenv = "0.15"
mime = "0.3"
assert_matches = "1"
hex = "0.4"
