[package]
name = "realworld-app"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-boxed-futures"]
use-boxed-futures = ["entrait/use-boxed-futures"]
use-associated-futures = ["entrait/use-associated-futures", "realworld-db/use-associated-futures"]

[dependencies]
# realworld
realworld-domain = { path = "../realworld_domain" }
realworld-db = { path = "../realworld_db" }

# core
clap = { version = "3", features = ["derive", "env"] }
dotenv = "0.15"
tracing = "0.1"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }

# web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["tower-log", "headers"] }
hyper = { version = "0.14", features = ["full"] }
headers = "0.3"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
serde_json = "1"

# design pattern
entrait = { path = "../../entrait/", features = ["unimock"] }

# error
anyhow = "1"

# data types
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
url = "2.0"
mime = "0.3"
assert_matches = "1"
hex = "0.4"
unimock = "0.4.0-alpha.2"
http = "0.2"
bytes = "1"
