[package]
name = "realworld-app"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# realworld
realworld-domain = { path = "../realworld_domain" }
realworld-db = { path = "../realworld_db" }

# core
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
tracing = "0.1"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }

# web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tower-log"] }
hyper = { version = "1", features = ["full"] }
headers = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde_json = "1"

# design pattern
entrait = { version = "0.7", features = ["unimock"] }

# error
anyhow = "1"

# data types
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
url = "2.0"
mime = "0.3"
assert_matches = "1"
hex = "0.4"
unimock = "0.6"
http = "1.0"
bytes = "1"
