[package]
name = "realworld-article"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-associated-future = []

[dependencies]
realworld-user = { path = "../realworld_user" }
realworld-core = { path = "../realworld_core" }
realworld-db = { path = "../realworld_db" }
entrait = "0.4"
serde = { version = "1", features = ["derive"] }
time = "0.3"
itertools = "0.10"

[dev-dependencies]
unimock = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
assert_matches = "1"
