[package]
name = "realworld-core"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = "0.6"
axum = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
time = "0.3"
entrait = "0.4.0-beta.1"
