[package]
name = "realworld-core"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "time"] }
axum = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = "1"
anyhow = "1"
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
time = { version = "0.3", features = ["serde-well-known"] }
entrait = "0.4"
unimock = "0.3"
