[package]
name = "realworld-db"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-associated-futures = []

[dependencies]
realworld-domain = { path = "../realworld_domain" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
entrait = "0.5.0-alpha.1"
time = "0.3"
uuid = "1"
sha2 = "0.10"
anyhow = "1"
futures = "0.3"

[dev-dependencies]
url = "2.0"
dotenv = "0.15"
assert_matches = "1"
hex = "0.4"
