[package]
name = "realworld-domain"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "time"] }
axum = { version = "0.6", features = ["headers"] }
headers = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
time = { version = "0.3", features = ["serde-well-known"] }
entrait = "0.5"
unimock = "0.4"
rand = "0.8"
argon2 = "0.4"
jwt = "0.16"
async-trait = "0.1"
itertools = "0.10"

[dev-dependencies]
url = "2.0"
dotenv = "0.15"
assert_matches = "1"
hex = "0.4"
