[package]
name = "realworld-user"
version = "0.1.0"
authors = ["Audun Halland <audun.halldand@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-associated-future = []

[dependencies]
realworld-core = { path = "../realworld_core" }
realworld-db = { path = "../realworld_db" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["headers"] }
headers = "0.3"
serde = { version = "1", features = ["derive"] }
entrait = "0.4.0-beta.1"
time = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
anyhow = "1"
argon2 = "0.4"
hmac = "0.12"
jwt = "0.16"
async-trait = "0.1"

[dev-dependencies]
url = "2.0"
dotenv = "0.15"
assert_matches = "1"
hex = "0.4"
unimock = "0.3"
